--- a/Team Ats-16 Frontend/package.json
+++ b/Team Ats-16 Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,21 +24,21 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.4",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.7",
-    "tailwindcss": "^3.4.18",
-    "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21",
-    "daisyui": "^3.9.4",
+    "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^3.9.4",
     "eslint": "^9.36.0",
-    "@eslint/js": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "typescript-eslint": "^8.45.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.7"
   }
 }
